DeckhouseAttempt/manifests/tester-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-tools
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tester
  namespace: test-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tester
  template:
    metadata:
      annotations:
        io.cilium.egress-gateway: "true"
      labels:
        app: tester
    spec:
      containers:
      - name: tester
        image: ubuntu:22.04
        tty: true
