DeckhouseAttempt/manifests/curl-runner.yml
apiVersion: v1
kind: Service
metadata:
  name: curl-runner
  namespace: default
spec:
  selector:
    app: curl-runner
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl-runner
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curl-runner
  template:
    metadata:
      labels:
        app: curl-runner
    spec:
      containers:
        - name: curl
          image: curlimages/curl:latest
          command: ["/bin/sh", "-c"]
          args:
            - |
              while true; do
                echo "Sending request to 10.0.200.100...";
                curl -m 3 http://10.0.200.100|| echo "Request failed";
                sleep 30;
              done
