DeckhouseAttempt/manifests/snmp-exporter-deckhouse-2hosts.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snmp-exporter
  namespace: snmp-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snmp-exporter
  template:
    metadata:
      labels:
        app: snmp-exporter
    spec:
#      hostNetwork: true
      containers:
        - name: snmp-exporter
          image: prom/snmp-exporter
          args:
            - "--config.file=/etc/snmp_exporter/snmp.yml"
          ports:
            - name: http
              containerPort: 9116
          volumeMounts:
            - name: config
              mountPath: /etc/snmp_exporter
      volumes:
        - name: config
          configMap:
            name: snmp-exporter-config
---
apiVersion: v1
kind: Service
metadata:
  name: snmp-exporter
  namespace: snmp-monitoring
  labels:
    app: snmp-exporter
    prometheus: main
spec:
  selector:
    app: snmp-exporter
  ports:
    - name: http
      port: 9116
      targetPort: 9116
