DeckhouseAttempt/manifests/istio-egress-ssh.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: allow-ssh-to-device
spec:
  addresses:
    - 10.0.200.200
  hosts:
    - ssh.device.local
  location: MESH_EXTERNAL
  ports:
    - number: 22
      name: tcp-ssh
      protocol: TCP
  resolution: NONE
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ssh-egress-route
spec:
  hosts:
    - ssh.device.local
  gateways:
    - mesh
    - istio-egressgateway
  tcp:
    - match:
        - port: 22
      route:
        - destination:
            host: istio-egressgateway.default.svc.cluster.local
            port:
              number: 22
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ssh-device-rule
spec:
  host: ssh.device.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssh-client
  labels:
    app: ssh-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ssh-client
  template:
    metadata:
      labels:
        app: ssh-client
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: ssh-client
          image: alpine
          command: ["/bin/sh"]
          args: ["-c", "apk add --no-cache openssh && sleep 3600"]
