DeckhouseAttempt/manifests/serviceentry-alpine.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: alpine-cdn
  namespace: default
spec:
  hosts:
    - dl-cdn.alpinelinux.org
  location: MESH_EXTERNAL
  ports:
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
